# pc-doctor

./: .gitignore  README.md  design-prototype.html  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: boot_time.rs  bsod_analyzer.rs  disk_analysis.rs  disk_cleanup.rs  disk_defrag.rs  disk_explorer.rs  driver_check.rs  driver_conflict.rs  hardware_diagnostics.rs  hardware_info.rs  mod.rs  network_diagnostics.rs  one_click_boost.rs  permission.rs  power_plan.rs  process_manager.rs  report_export.rs  service_manager.rs  startup_manager.rs  system_health.rs  system_info.rs  system_repair.rs
src/components/: BsodAnalyzer.vue  Dashboard.vue  DiskAnalysis.vue  DiskCleanup.vue  DiskDefrag.vue  DriverCheck.vue  DriverConflict.vue  HardwareDiagnostics.vue  Icon.vue  NetworkDiagnostics.vue  OneClickBoost.vue  PowerPlan.vue  ProcessManager.vue  ScanLogPanel.vue  ServiceManager.vue  StartupManager.vue  SystemHealth.vue  SystemRepair.vue
src/stores/: scanLog.js
src/styles/: main.css
